# School_Management_System

./: .dockerignore  .gitignore  README.md  TODO.md  docker-compose.yml  dockerfile  main.py  pyproject.toml  requirements.txt
school/: db.sqlite3  manage.py
school/base/: admin.py  decorators.py  forms.py  models.py  urls.py  views.py
school/base/data/: __init__.py  faqs.py  features.py
school/base/migrations/: 0001_initial.py  0002_remove_section_unique_class_teacher_and_more.py
school/base/services/: fee_service.py  salary_service.py  transaction_service.py
school/base/templates/: 403.html  about.html  contact.html  dashboard.html  features.html  home.html  learn_more.html  login.html  pricing.html  sidebar.html
school/base/templates/classes/: all_classes.html  class_confirm_delete.html  classes_form.html
school/base/templates/fees/: all_fee.html  fee_confirm_delete.html  fee_form.html
school/base/templates/reports/: financial_reports.html
school/base/templates/salaries/: all_salary.html  salary_confirm_delete.html  (+1 more)
school/school/: settings.py  urls.py  wsgi.py
school/static/js/: scripts.js  teacher_list.js
school/static/styles/: about.css  class_all.css  class_form.css  contact.css  dashboard.css  features.css  fee_all.css  fee_form.css  financial_reports.css  learn_more.css  login.css  navbar.css  pricing.css  salary_all.css  salary_form.css  section_all.css  section_form.css  student_all.css  student_form.css  style_0.css  teacher_form.css  teacher_list.css  transaction_all.css  transaction_form.css
school/templates/: main.html  navbar.html
(+14 files in other folders)
